<resources>
    <!--<string name="app_name">Tap&amp;Drive</string>-->
    <string name="app_name">Cannan</string>

    <string translatable="false" name="facebook_app_id">274105243004091</string>
    <string translatable="false" name="fb_login_protocol_scheme">fb274105243004091</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--generic-->
    <string name="err_connection">Connection Error!!</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>

    <!-- about pager -->
    <string name="about_pager_title_1">Welcome to Canaan App</string>
    <string name="about_pager_desc_1">The First and Best Car Rental Service in MENA &amp; GCC regions</string>
    <string name="about_pager_title_2">No Hassle just TapDrive</string>
    <string name="about_pager_desc_2">It’s a hassle-free service for listing and booking cars from various options</string>
    <string name="about_pager_title_3">Fast &amp; Easy to Use</string>
    <string name="about_pager_desc_3">Book your ride in 3 easy steps, really simple and super fast</string>
    <string name="about_pager_btn_next">Next</string>

    <!--filters -->
    <string name="filters_title">Car types</string>
    <string name="menu_action_done">OK</string>
    <string name="filters_cancel">Cancel</string>
    <string name="filters_ok">Ok</string>
    <string name="filters_group_types">Choose Car Type</string>
    <string name="filters_select_all">Select all</string>
    <string name="filters_select_car_type">Select Car Type</string>

    <string name="drawer_help">Are you a partner</string>
    <string name="drawer_logout">logout</string>
    <string name="drawer_profile">PROFILE</string>
    <string name="drawer_login">LOGIN</string>
    <string name="drawer_payment">PAYMENT</string>
    <string name="drawer_trips">TRIPS</string>
    <string name="drawer_orders">ORDERS</string>
    <string name="drawer_partner_cars">MY CARS</string>
    <string name="drawer_partner_invoices">INVOICES</string>
    <string name="drawer_wish">WISH LIST</string>
    <string name="drawer_settings">SETTINGS</string>
    <string name="drawer_notifications">NOTIFICATIONS</string>
    <string name="drawer_orders">ORDERS</string>
    <string name="drawer_login">LOGIN</string>

    <string name="location_not_enabled_msg">Please, Enable Locations services for better results</string>
    <string name="location_not_enabled_ok">Enable</string>
    <string name="location_not_enabled_cancel">Cancel</string>

    <!-- LoginActivity -->
    <string name="activity_login_title">Login</string>
    <string name="activity_login_hint_email">Email</string>
    <string name="activity_login_password_hint">Password</string>
    <string name="activity_login_forgot_password_hint">Forgot Password?</string>
    <string name="activity_login_btn_login">Log In</string>
    <string name="activity_login_btn_new_user">New User ? Register !</string>
    <string name="activity_login_or_connect_with">Or connect with</string>
    <string name="activity_login_btn_facebook">Facebook</string>
    <string name="activity_login_btn_twitter">Google</string>
    <string name="activity_login_email_invalid">Invalid email address</string>
    <string name="activity_login_email_or_pass_is_wrong">Email or password is wrong</string>
    <string name="activity_login_field_required">required</string>

    <!-- RegisterActivity -->
    <string name="activity_register_account_info">Account Info</string>
    <string name="activity_register_hint_email">Email</string>
    <string name="activity_register_hint_phone">Phone</string>
    <string name="activity_register_hint_birth_day">Birthday</string>
    <string name="activity_register_hint_password">Password</string>
    <string name="activity_register_already_have_account">Already have account?</string>
    <string name="activity_register_btn_login">login</string>
    <string name="activity_register_add_your_photo">Add your photo</string>
    <string name="activity_register_hint_full_name">Full Name</string>
    <string name="activity_register_hint_address">Address</string>
    <string name="activity_register_congrats">Congratulations!</string>
    <string name="activity_register_congrats_msg">You can now check amazing car offers and rent the best</string>
    <string name="activity_register_get_started">Get Started</string>
    <string name="activity_register_field_required">required</string>
    <string name="activity_register_login_skip">Skip</string>
    <string name="activity_register_next">Next Step</string>
    <string name="activity_register_finish">Finish</string>
    <string name="activity_register_male">Male</string>
    <string name="activity_register_female">Female</string>
    <string name="activity_register_step2_title">Personal Information</string>
    <string name="activity_register_birthdate">Birthdate</string>
    <string name="activity_register_email_invalid">Invalid email address</string>

    <!-- MainActivity -->
    <string name="activity_main_toolbar_car">Cars</string>
    <string name="activity_main_toolbar_yachts">Yachts</string>
    <string name="activity_main_toolbar_helicopter">Helicopter</string>

    <string name="activity_request_failed">Request fail, retry again please.</string>

    <string name="activity_forget_password_title">FORGOT PASSWORD</string>
    <string name="activity_forget_password_desc">Enter Your Email to receive a password reset code</string>
    <string name="activity_forget_password_email_hint">Email</string>
    <string name="activity_forget_password_btn_submit">SUBMIT</string>
    <string name="activity_forget_password_request_sent">Forget password request sent, check your mailbox.</string>
    <string name="activity_forget_password_request_failed">Forget password request failed</string>
    <string name="activity_forget_password_user_not_found">User not found</string>

    <!-- reset psw -->
    <string name="activity_reset_password_title">CHANGE PASSWORD</string>
    <string name="activity_reset_password_desc">Check your email for a password reset code</string>
    <string name="activity_reset_password_token_placeholder">Password reset code</string>
    <string name="activity_reset_password_psw_placeholder">New Passwrod</string>
    <string name="activity_reset_password_btn">SUBMIT</string>
    <string name="activity_reset_password_success">Password changed successfully</string>

    <!-- partner cars-->
    <string name="cars_list_title">My Cars</string>
    <string name="cars_list_empty">You haven\'t added any cars</string>

    <!-- add car -->
    <string name="add_car_title">Add Car</string>
    <string name="add_car_title1">Car info</string>
    <string name="add_car_title2">Car Pricing</string>
    <string name="add_car_title3">Area</string>
    <string name="add_car_country">Country</string>
    <string name="add_car_city">"City</string>
    <string name="add_car_title4">Car Details</string>
    <string name="add_car_en_name_placeholder">English Name</string>
    <string name="add_car_ar_name_placeholder">Arabic Name</string>
    <string name="add_car_monthly">Monthly</string>
    <string name="add_car_weekly">Weekly</string>
    <string name="add_car_daily">Daily</string>
    <string name="add_car_hourly">Hourly</string>
    <string name="add_car_next">Next</string>
    <string name="add_car_finish">Finish</string>
    <string name="add_car_price_not_set">Please set the prices</string>
    <string name="add_car_name_not_set">Please set the car title</string>
    <string name="add_car_image_not_set">Please add the car image</string>
    <string name="add_car_info_not_set">Please add the car info</string>
    <string name="add_car_success">Car Adedd Successfully</string>

    <!--invoices-->
    <string name="invoices_date">Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">LOADING</string>
    <string name="history_screen_title">History</string>
    <string name="settings_screen_title">Settings</string>
    <string name="notifications_screen_title">Notifications</string>
    <string name="cars_screen_title">My Cars</string>
    <string name="invoices_screen_title">Invoices</string>
    <string name="payment_method">Payment method</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="pay_to_the_driver_when_you_get_your_car">Pay to the driver when you get your car</string>
    <string name="months">Months</string>
    <string name="weeks">Weeks</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="total">Total</string>
    <string name="book">Book</string>
    <string name="filters_vehicle">Vehicle</string>
    <string name="filters_price">Price</string>
    <string name="filters_apply">Apply</string>
    <string name="filters_reset">Reset</string>
    <string name="panel_vehicles">Vehicles</string>
    <string name="settings_language">Language</string>
    <string name="settings_terms_of_service">Terms of service</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="please_login_hint">Please login first</string>
    <string name="daily_price">Daily Price: </string>
    <string name="hourly_price">Hourly Price: </string>
    <string name="drive_now">Drive Now</string>
    <string name="total_cost">Total Cost: </string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="booking_information">Booking Information</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="trip_details">Trip Details</string>
    <string name="booking_from">From</string>
    <string name="booking_to">To</string>
    <string name="total_price">Total Price</string>
    <string name="let_s_drive">LET\'S DRIVE</string>
    <string name="booked_successfully">Booked successfully, will contact you shortly</string>
    <string name="currency"> AED</string>
    <string name="select_booking_period">Please select the booking period before you continue</string>
    <string name="return_after_start">Your return time should be after your start time</string>
    <string name="return_after_start_and_before_reservation">Your return time should be after your start time and before the start of the next reservation in the same day</string>
    <string name="finish">Finish</string>
    <string name="choose_button_text">Choose</string>
    <string name="select_text">Select</string>
    <string name="notification_description">You have sent a rent request</string>
    <string name="notification_order_sent">You have sent a rent request</string>
    <string name="notification_new_order">New rent request</string>
    <string name="notification_order_approved">Order approved</string>
    <string name="select_image_text">Select your image:</string>
    <string name="order_state_pending">Pending</string>
    <string name="order_state_approve">Approve</string>
    <string name="order_state_approved">Approved</string>
    <string name="order_state_on_the_way">On the way</string>
    <string name="order_state_delivered">Delivered</string>
    <string name="order_state_completed">Completed</string>

</resources>
