<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_drawer_profile"
            android:title="@string/drawer_profile" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_drawer_notif"
            android:title="@string/drawer_notifications"/>

        <item
            android:id="@+id/nav_trip_history"
            android:icon="@drawable/ic_orders"
            android:title="@string/drawer_trips"/>

        <item
            android:id="@+id/nav_partner_cars"
            android:icon="@drawable/ic_drawer_my_cars"
            android:title="@string/drawer_partner_cars"/>

        <item
            android:id="@+id/nav_partner_invoices"
            android:icon="@drawable/ic_drawer_wallet"
            android:title="@string/drawer_partner_invoices"/>

        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_drawer_wishlist"-->
            <!--android:title="@string/drawer_wish"/>-->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_drawer_settigngs"
            android:title="@string/drawer_settings"/>
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@android:drawable/ic_menu_share"-->
                <!--android:title="Share"/>-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@android:drawable/ic_menu_send"-->
                <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>