<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_theme"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <com.brain_socket.tapdrive.customViews.TextViewCustomFont
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginRight="60dp"
            android:layout_marginEnd="60dp"
            android:text="@string/activity_login_title"
            android:textSize="@dimen/ts_title_small"
            android:textColor="@color/white"
            app:fontId="2" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="none"
        tools:context="com.brain_socket.tapdrive.controllers.onBoarding.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:src="@drawable/logo_login" />

            <com.brain_socket.tapdrive.customViews.EditTextCustomFont
                android:id="@+id/etEmail"
                android:layout_width="@dimen/login_element_width"
                android:layout_height="@dimen/login_button_height"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/shape_rounded_edit_text"
                android:drawableLeft="@drawable/ic_email"
                android:gravity="center"
                android:hint="@string/activity_login_hint_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="fatherboard1@gmail.com"
                android:textColor="@color/black"
                android:textSize="@dimen/ts_text_normal"
                app:fontId="1" />

            <com.brain_socket.tapdrive.customViews.EditTextCustomFont
                android:id="@+id/etPassword"
                android:layout_width="@dimen/login_element_width"
                android:layout_height="@dimen/login_button_height"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_rounded_edit_text"
                android:drawableLeft="@drawable/ic_psw"
                android:gravity="center"
                android:hint="@string/activity_login_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="29dp"
                android:paddingRight="25dp"
                android:text="123456"
                android:textColor="@color/black"
                android:textSize="@dimen/ts_text_normal"
                app:fontId="1" />

            <com.brain_socket.tapdrive.customViews.TextViewCustomFont
                android:id="@+id/btnForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:gravity="right|center_vertical"
                android:text="@string/activity_login_forgot_password_hint"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_text_small"
                app:fontId="2" />


            <com.brain_socket.tapdrive.customViews.TextViewCustomFont
                android:id="@+id/btnLogin"
                android:layout_width="180dp"
                android:layout_height="@dimen/login_button_height"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_black_rounded_button"
                android:gravity="center"
                android:text="@string/activity_login_btn_login"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_text_small"
                app:fontId="2" />

            <com.brain_socket.tapdrive.customViews.TextViewCustomFont
                android:id="@+id/btnNewUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/activity_login_btn_new_user"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_text_normal"
                app:fontId="2" />

            <View
                android:id="@+id/vSeperator"
                android:layout_width="@dimen/login_element_width"
                android:layout_height="0.6dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@color/black"></View>

            <com.brain_socket.tapdrive.customViews.TextViewCustomFont
                android:id="@+id/tvOrConnectWith"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/activity_login_or_connect_with"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_text_normal"
                app:fontId="1" />

            <com.brain_socket.tapdrive.customViews.TextViewCustomFont
                android:id="@+id/btnFacebookLogin"
                android:layout_width="@dimen/login_element_width"
                android:layout_height="@dimen/login_button_height"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_rounded_facebook_button"
                android:drawableLeft="@drawable/ic_fb"
                android:drawableStart="@drawable/ic_fb"
                android:gravity="center"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/activity_login_btn_facebook"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_text_small"
                app:fontId="2" />

            <com.brain_socket.tapdrive.customViews.TextViewCustomFont
                android:id="@+id/btnTwitterLogin"
                android:layout_width="@dimen/login_element_width"
                android:layout_height="@dimen/login_button_height"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_rounded_twitter_button"
                android:drawableLeft="@drawable/ic_google_plus"
                android:drawableStart="@drawable/ic_google_plus"
                android:gravity="center"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/activity_login_btn_twitter"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_text_small"
                app:fontId="2" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>