<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brain_socket.tapdrive.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@drawable/login_bg">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_login"/>

        <include
            android:id="@+id/stepsView"
            layout="@layout/layout_register_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"></include>

        <ViewAnimator
            android:id="@+id/vaRegisterSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <!-- step1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <com.brain_socket.tapdrive.view.TextViewCustomFont
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/ts_title_big"
                    android:textColor="@color/white"
                    android:text="@string/activity_register_account_info"
                    app:fontId="3"/>
                <com.brain_socket.tapdrive.view.EditTextCustomFont
                    android:id="@+id/etEmail"
                    android:layout_width="@dimen/login_element_width"
                    android:layout_height="@dimen/login_button_height"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:background="@drawable/shape_rounded_edit_text"
                    android:paddingRight="30dp"
                    android:paddingLeft="25dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/ts_text_normal"
                    android:textColor="@color/black"
                    android:hint="@string/activity_register_hint_email"
                    android:inputType="textEmailAddress"
                    android:gravity="center"
                    app:fontId="1"/>
                <com.brain_socket.tapdrive.view.EditTextCustomFont
                    android:id="@+id/etPassword"
                    android:layout_width="@dimen/login_element_width"
                    android:layout_height="@dimen/login_button_height"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/ic_psw"
                    android:background="@drawable/shape_rounded_edit_text"
                    android:paddingRight="25dp"
                    android:paddingLeft="29dp"
                    android:layout_gravity="center"
                    android:inputType="textPassword"
                    android:textSize="@dimen/ts_text_normal"
                    android:textColor="@color/black"
                    android:hint="@string/activity_register_hint_password"
                    android:gravity="center"
                    app:fontId="1"/>
            </LinearLayout>

            <!-- step2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.brain_socket.tapdrive.view.TextViewCustomFont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/ts_text_big"
                    android:textColor="@color/white"
                    android:text="@string/activity_register_step2_title"
                    app:fontId="3"/>
                <com.brain_socket.tapdrive.view.EditTextCustomFont
                    android:id="@+id/etFullName"
                    android:layout_width="@dimen/login_element_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_drawer_profile"
                    android:background="@drawable/shape_rounded_edit_text"
                    android:paddingRight="30dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="25dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/ts_text_normal"
                    android:textColor="@color/black"
                    android:hint="@string/activity_register_hint_full_name"
                    android:gravity="center"
                    app:fontId="1"/>


                <LinearLayout
                    android:layout_width="@dimen/login_element_width"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/shape_rounded_edit_text"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:hideNameCode="true"/>

                    <com.brain_socket.tapdrive.view.EditTextCustomFont
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textSize="@dimen/ts_text_normal"
                        android:textColor="@color/black"
                        android:hint="@string/activity_register_hint_phone"
                        app:fontId="1"/>

                </LinearLayout>

                <include layout="@layout/layout_gender_toggle"
                    android:layout_width="@dimen/login_element_width"
                    android:layout_height="@dimen/login_button_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"></include>

                <com.brain_socket.tapdrive.view.EditTextCustomFont
                    android:id="@+id/etBirthday"
                    android:layout_width="@dimen/login_element_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableRight="@drawable/ic_drawer_profile"
                    android:background="@drawable/shape_rounded_edit_text"
                    android:paddingRight="30dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="45dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/ts_text_normal"
                    android:textColor="@color/black"
                    android:hint="@string/activity_register_hint_birth_day"
                    android:gravity="center"
                    android:editable="false"
                    app:fontId="1"/>

            </LinearLayout>

            <!-- step3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.brain_socket.tapdrive.view.TextViewCustomFont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/ts_text_big"
                    android:textColor="@color/white"
                    android:text="@string/activity_register_congrats"
                    app:fontId="3"/>
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_signup_success_check"/>
                <com.brain_socket.tapdrive.view.TextViewCustomFont
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textSize="@dimen/ts_text_normal"
                    android:textColor="@color/white"
                    android:text="@string/activity_register_congrats_msg"
                    app:fontId="1"/>
            </LinearLayout>

        </ViewAnimator>

        <com.brain_socket.tapdrive.view.TextViewCustomFont
            android:id="@+id/btnNext"
            android:layout_width="200dp"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/shape_black_rounded_button"
            android:textSize="@dimen/ts_text_normal"
            android:textColor="@color/white"
            android:text="@string/activity_register_next"
            app:fontId="1"/>

        <LinearLayout
            android:id="@+id/llAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <com.brain_socket.tapdrive.view.TextViewCustomFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/ts_text_normal"
                android:textColor="@color/black"
                android:text="@string/activity_register_already_have_account"
                app:fontId="1"/>
            <com.brain_socket.tapdrive.view.TextViewCustomFont
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/ts_text_normal"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:text="@string/activity_register_btn_login"
                app:fontId="1"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>
